--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -4,6 +4,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap');
 
+$color-black: #000;
+$color-white: #fff;
+$color-gray: #525557;
+$color-dark-gray: #454545;
+$color-light-gray: #f9f9f9;
+$color-red: #EB3535;
+$color-red-berry: #FE3B1F;
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -31,8 +39,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 ::selection {
-  background: rgba(#f9f9f9, 0.9);
-  color: #333;
+  background: rgba($color-light-gray, 0.9);
+  color: $color-red;
 }
 
 p {
