--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,9 +1,15 @@
 @import 'variables';
 @import 'mixins';
 
+/*-------------------------------------------*\
+  Fonts
+\*-------------------------------------------*/
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap');
 
+/*-------------------------------------------*\
+  Colors
+\*-------------------------------------------*/
 $color-black: #000;
 $color-white: #fff;
 $color-gray: #525557;
@@ -12,6 +18,9 @@ $color-light-gray: #f9f9f9;
 $color-red: #EB3535;
 $color-red-berry: #FE3B1F;
 
+/*-------------------------------------------*\
+  Global Styles
+\*-------------------------------------------*/
 * {
   box-sizing: border-box;
   margin: 0;
@@ -23,19 +32,20 @@ $color-red-berry: #FE3B1F;
 }
 
 html {
+  font-size: 62.5%;
   overflow-x: hidden;
   scroll-behavior: smooth;
 }
 
 body {
   font-family: 'Montserrat', sans-serif;
-  font-size: 16px;
   overflow-x: hidden !important;
   line-height: 1.6;
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Rowdies', cursive;
+  color: $color-red-berry;
 }
 
 ::selection {
@@ -45,6 +55,85 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
   line-height: 1.6;
+}
+
+/*-------------------------------------------*\
+  Miscellaneous
+\*-------------------------------------------*/
+.bg-stars {
+  background: $color-black url("../img/stars.png") repeat fixed center;
+}
+
+.bg-black {
+  background: $color-black;
+}
+
+section {
+  padding: 7rem 20%;
+}
+
+.btn-1 {
+  display: block;
+  width: 395px;
+  margin: 175px auto 18px auto;
+
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 29.26px;
+  text-align: center;
+  color: #fff;
+
+  background: #FE3B1F;
+  padding: 20px 50px;
+  text-decoration: none;
+  text-transform: capitalize;
+  border-radius: 50px;
+  cursor: pointer;
+}
+
+.btn-2 {
+  display: block;
+  width: 338px;
+  margin: auto;
+
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 29px;
+  text-align: center;
+  color: #fff;
+
+  padding: 20px;
+  text-decoration: underline;
+  text-transform: capitalize;
+  cursor: pointer;
+}
+
+
+/*-------------------------------------------*\
+  Landing Page
+\*-------------------------------------------*/
+#landing-page {
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  text-align: center;
+
+  h1 {
+    font: 400 6rem 'Rowdies', cursive;
+    margin: 6.563rem 0;
+  }
+
+  img {
+    transform: rotate(5deg);
+    margin: auto;
+  }
 }
 
 @import 'utilities';
