--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -125,11 +125,11 @@ section {
 
 
 
-.page {
+.pages {
   display: none;
 }
 
-.page.active {
+.pages.active {
   display: block;
 
   height: 100vh;
@@ -388,9 +388,17 @@ section {
   padding: 5rem;
 
   grid-area: content;
-  justify-self: center;
+  //justify-self: center;
   align-self: center;
+
+  h1 {
+    text-align: center;
+    font-size: 64px;
+    white-space: nowrap;
+  }
 }
+
+
 
 
 /*-------------------------------------------*\
@@ -400,7 +408,14 @@ section {
   padding: 5rem;
 
   grid-area: content;
-  justify-self: center;
+  //justify-self: center;
+
+  h1 {
+    text-align: center;
+    font-size: 64px;
+    white-space: nowrap;
+    color: $color-white;
+  }
 }
 
 
